update pom file